refactor: update API, unify Query and Results, version 3.0
Former-commit-id: f3c6adabfa80bf1830e3b5a641315a79fde7825c [formerly 8591377a3b1ceda353a9ce4a466fd3cd12f4726b]
Former-commit-id: b9fe3b95252b51a2920ddede9d0ecaeddef1a6a9